--- a/registro.html
+++ b/registro.html
@@ -65,8 +65,8 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="state" id="state" class="input" type="text" placeholder="Estado" required pattern="[\s\S]{4,30}" data-tipo="estado">
-                        <label class="input-label" for="state">Estado</label>
+                        <input name="provincia" id="provincia" class="input" type="text" placeholder="Provincia" required pattern="[\s\S]{4,30}" data-tipo="provincia">
+                        <label class="input-label" for="provincia">Provincia</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                 </fieldset>
